fixed footer spacing on the landing page

--- a/frontend/src/components/LandingPage/landingpage.css
+++ b/frontend/src/components/LandingPage/landingpage.css
@@ -1,5 +1,5 @@
 .landing-page-container {
-  height: 100vh;
+  height: 80vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
